src/views/page/Home/components/SloganBlock.scss
.slogan-section {
  .slogan-wrapper {
    margin-bottom: 30px;

    .slogan {
      color: #f1f2f2;

      .word-primary {
        color: #ffb229;
      }

      .word-secondary {
        color: #dc962a;
      }

      @include media-breakpoint-up(sm) {
        max-width: 400px;
      }

      @include media-breakpoint-up(lg) {
        max-width: 700px;
      }
    }

    .slogan-links {
      .slogan-link {
        flex: 1 0 50%;

        .circled-word {
          width: 90%;
          margin-top: 10%;
          padding: 20px 12px;
          border-width: 2px;
          border-radius: 6px;
          font-size: 21px;

          @media (min-width: 400px) {
            width: 94%;
            margin-top: 6%;
          }

          @include media-breakpoint-up(sm) {
            padding: 26px 24px;
            font-size: 24px;
          }

          @include media-breakpoint-up(lg) {
            padding: 25px 10px;
            margin-top: 5%;
            font-size: 28px;
            border-width: 3px;
            width: 95%;
          }

          @include media-breakpoint-up(xl) {
            font-size: 36px;
            padding: 25px 10px;
            border-width: 4px;
          }

          @include media-breakpoint-up(xxl) {
            font-size: 42px;
            padding: 35px 10px;
          }
        }
      }
    }

    .start-journey-button {
      font-size: 16px;
      color: #f1f2f2;
      padding: 8px 21px;
      border: solid 2px #f1f2f2;
      border-radius: 4px;
      transition: 0.3s;

      &:hover {
        background-color: #f1f2f2;
        color: #17181c;
      }

      @include media-breakpoint-up(lg) {
        font-size: 21px;
        border: solid 4px #f1f2f2;
        padding: 12px 27px;
      }

      @include media-breakpoint-up(xxl) {
        font-size: 26px;
        padding: 15px 27px;
      }
    }
  }
}

